Archive2/ae/b9485401ed0913/output
main.cpp: In function 'int main()':
main.cpp:18:17: error: invalid conversion from 'const char*' to 'char*' [-fpermissive]
     char* bar = foo;
                 ^
